--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.6.2",
