--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.7",
     "antd": "^5.14.1",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
     "diacritics": "^1.3.0",
     "firebase": "^10.7.1",
@@ -24,6 +25,7 @@
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -36,6 +38,7 @@
     "react-scripts": "^5.0.1",
     "react-spreadsheet-import": "^4.6.1",
     "react-toastify": "^10.0.1",
+    "recharts": "^2.12.2",
     "redux": "^5.0.1",
     "sweetalert2": "^11.10.3",
     "swiper": "^11.0.5",
