--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "diacritics": "^1.3.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.1.0",
