--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.1.0",
@@ -39,6 +40,7 @@
     "react-scripts": "^5.0.1",
     "react-spreadsheet-import": "^4.6.1",
     "react-toastify": "^10.0.1",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.12.2",
     "redux": "^5.0.1",
     "sweetalert2": "^11.10.3",
